--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -20,10 +21,12 @@
   </header>
 
   <section class="home-hero">
-    <h1 class="title">Makinkg things looks great 
-      <span>for companies who make great stuff</span>
-    </h1>
-    <a href="" class="button button-accent">See Our Work</a>
+    <div class="container">
+      <h1 class="title">Making things looks great 
+        <span>for companies who make great stuff</span>
+      </h1>
+      <a href="" class="button button-accent">See Our Work</a>
+    </div>
   </section>
 
   <section class="home-about">
