--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
     </div>
   </section>
 
-  <section class="home-about">
-    <div class="home-about-textbox">
-      <h1>Who We Are</h1>
-      <p>Sit by the fire drink water out of the faucet hide head under blanket so no one can see cat is love, cat is life. Knock dish of table eating always hungry so favor packaging over toy.</p>
-      <p><strong>Rub face on owner.</strong> Peer out window, chatter at birds, lure them to mouth. Chase ball of string eat a plant. Idle a hand I am the best have secret plans.</p>
-    </div>
-  </section>
+  <div class="container">
+    <section class="home-about">
+      <div class="home-about-textbox">
+        <h1>Who We Are</h1>
+        <p>Sit by the fire drink water out of the faucet hide head under blanket so no one can see cat is love, cat is life. Knock dish of table eating always hungry so favor packaging over toy.</p>
+        <p><strong>Rub face on owner.</strong> Peer out window, chatter at birds, lure them to mouth. Chase ball of string eat a plant. Idle a hand I am the best have secret plans.</p>
+      </div>
+    </section>
+  </div>
 
   <section class="portfolio">
     <h1>See Our Work</h1>
