Portfolio Section media queries, transition: all ease-in-out 250ms, position relative absolute, float, overflow: hidden, transform: translateY 150% 0%

--- a/index.html
+++ b/index.html
@@ -43,57 +43,52 @@
     <h1>See Our Work</h1>
 
     <!-- portfolio item 01 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-01.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
         <a href="" class="button button-accent button-small">Project details</a>
       </figcaption>
     </figure>
-  </section>
 
     <!-- portfolio item 02 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-02.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
         <a href="" class="button button-accent button-small">Project details</a>
       </figcaption>
     </figure>
-  </section>
 
     <!-- portfolio item 03 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-03.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
         <a href="" class="button button-accent button-small">Project details</a>
       </figcaption>
     </figure>
-  </section>
 
     <!-- portfolio item 04 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-04.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
         <a href="" class="button button-accent button-small">Project details</a>
       </figcaption>
     </figure>
-  </section>
 
     <!-- portfolio item 05 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-05.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
         <a href="" class="button button-accent button-small">Project details</a>
       </figcaption>
     </figure>
-  </section>
 
     <!-- portfolio item 06 -->
-    <figure>
+    <figure class="port-item">
       <img src="img/portfolio-06.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project title</p>
